# ssh-buddy

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.live  GAMEPLAN.md  README.md  docker-compose.live.yml  docker-compose.test.yml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build-android.yml  build.yml  release.yml
backend/pocketbase/: README.md
backend/pocketbase/pb_migrations/: 20260527103000_initial_sync_schema.js  20260528120000_sync_settings_and_optional_revision.js
backend/ws-ssh-proxy/: go.mod  go.sum  main.go  main_test.go
docs/superpowers/plans/: 2026-05-26-phase-1-local-client-completeness.md  2026-05-26-plan-1-5-browser-ssh-stabilization.md  2026-05-26-plan-1-local-mvp.md  2026-05-27-phase-2-sync.md  2026-05-28-sync-merge-conflict.md
docs/superpowers/specs/: 2026-05-26-architecture-design.md  2026-05-27-daily-driver-ux-connection-design.md  2026-05-27-phase-2-sync-design.md  2026-05-28-sync-merge-conflict-design.md
src/: App.tsx  main.tsx  theme.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs  ssh.rs
src-tauri/src/ssh/: known_hosts.rs  manager.rs  mod.rs  session.rs
src-tauri/src/storage/: keystore.rs
src-tauri/tests/: README.md  integration_ssh.rs
src/lib/: id.test.ts  tauri.ts
src/modules/auth/: AccountModal.tsx  SetupModal.tsx  UnlockScreen.tsx  useAuth.test.ts  useAuth.ts
src/modules/crypto/: crypto.test.ts  index.ts
src/modules/keyStore/: index.ts  mobile.ts  native.ts  platform.ts  web.test.ts  (+1 more)
(+44 files in other folders)
