[package]
name = "ssh-buddy"
version = "0.2.6"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ssh_buddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# Cross-platform deps — compiled on desktop AND mobile. The native SSH stack
# (russh + tokio) runs on Android too, per the architecture spec.
[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = "0.45"
russh-keys = "0.45"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
log = "0.4"
sha2 = "0.10"

# Desktop-only deps. The updater/process plugins have no mobile support, and the
# `keyring` crate has no Android backend (Android uses a file-based keystore instead).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
keyring = "3"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometry = "0.2.8"

[dev-dependencies]
tempfile = "3"

